--- a/app/views/users/reqclient.html.erb
+++ b/app/views/users/reqclient.html.erb
@@ -31,7 +31,7 @@
 								 <td> <%= requistion.requistion_comment %></td>
                  <td> <%= status_names[requistion.status.to_sym] %> </td>
 								 <td> <%= requistion.created_at.strftime("%d.%m.%Y %H:%M") %></td>
-								 <td><% if current_user.client? and requistion.status == 'comleted'%> 
+								 <td><% if current_user.client? and requistion.status == 'completed'%> 
 <button class="btn btn-danger mark" data-toggle="modal" data-target="#myModal" >Оценить</button>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
