--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -141,6 +141,11 @@
     				<td>Рабочий</td>
     			</tr>
     			<tr>
+    				<th>Отменена</th>
+    				<td id='show_time_change_canceled'></td>
+    				<td id='show_who_cancel'>кто отменил</td>
+    			</tr>
+    			<tr>
     				<th>Выполнено</th>
     				<td id='show_time_change_completed'></td>
     				<td>Рабочий</td>
