--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
 	<div class="col-xs-3">
 	</div>
 		<div class="col-xs-6">
-		<table id="requistions" class="table">
+		<table id="clients" class="table">
 			<thead>
 				<tr>
 					<th>Номер</th>
