--- a/app/views/users/req.html.erb
+++ b/app/views/users/req.html.erb
@@ -23,7 +23,7 @@
 			<tbody>
 				<% for pair in @all_pairs %>
 				<% @requistion = pair.requistion %>
-				<% if @requistion.status != "completed"	%>
+				<% if !@requistion.completed? and !@requistion.done? and !@requistion.canceled? %>
 				
 				<tr>
 					 <td><%= link_to @requistion.object,  {:controller => :requistions, :action => :show, :id => @requistion.id}, {:method => :get} %></td>
@@ -54,7 +54,7 @@
 				</tr>
 			</tfoot>
 		</table>
-				<h4>Завершенные заявки</h4>
+		<h4>Завершенные заявки</h4>
 		<table id="old_requistion_for_workers" class="table">
 			<thead>
 			<tr>
@@ -64,14 +64,12 @@
 				<th><%= 'Контакты' %></th>						
 				<th><%= "Статус" %></th>
 				<th><%= "Время подачи заявки" %></th>
-				<th><%= "Планируемое время окончания" %></th>
-				<th><%= "Действия" %> </th>
 			</tr>
 			</thead>
 			<tbody>
 				<% for pair in @all_pairs %>
 				<% @requistion = pair.requistion %>
-				<% if @requistion.status == "completed"	%>
+				<% if @requistion.completed? or @requistion.done? or @requistion.canceled? %>
 				<tr>
 					 <td><%= link_to @requistion.object,  {:controller => :requistions, :action => :show, :id => @requistion.id}, {:method => :get} %></td>
 					 <td><%= link_to Building.find(@requistion.building_id).arrival_address,  {:controller => :buildings, :action => :show, :id => @requistion.building_id}, {:method => :get} %></td>
@@ -79,12 +77,6 @@
 					 <td><%= @requistion.contact_phone+' '+@requistion.contact_name %></td>
 					 <td> <%= status_names[@requistion.status.to_sym] %> </td>
 					 <td> <%= @requistion.created_at.strftime("%d.%m.%Y %H:%M") %> </td>
-					 <td> <%= @requistion.time_deadline.strftime("%d.%m.%Y") %> </td>
-					 <td> <%= link_to "Принять в работу",  {:controller => :requistions, :action => :to_take_in_work, :id => @requistion.id}, {:method => :get, :class=>"btn"} %>
-					 	<%= link_to "Завершить",  {:controller => :requistions, :action => :done, :id => @requistion.id}, {:method => :get, :class=>"btn", data: { confirm: "Завершить заявку?" }} %>
-					 	<%= link_to "Отменить",  {:controller => :requistions, :action => :cancel, :id => @requistion.id}, {:method => :get, :class=>"btn", data: { confirm: "Отменить заявку?" }} %>
-
-					 </td>
 				</tr>
 			<% end %>
 			<% end %>
@@ -95,7 +87,6 @@
 					<th></th>
 					<th></th>
 					<th>Статус</th>
-					<th></th>
 					<th></th>
 					<th></th>
 				</tr>
