--- a/app/views/users/reqclient.html.erb
+++ b/app/views/users/reqclient.html.erb
@@ -88,7 +88,7 @@ $('#mark').rating({'showCaption':true,
   });
 });
 </script>
-                 <% else %>
+                 <% elsif requistion.status != 'canceled' %>
                     <%= link_to canceldone_path(requistion), method: :post, data: { confirm: "Вы точно хотите отменить заявку на выезд инженера?" } do%>
                       <span class="glyphicon glyphicon-trash" title="удалить"></span>
                     <%  end %>                  
