--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -34,7 +34,7 @@
 	<div class="col-xs-9">
 
 
-	<table id ="requistions" class="table table-bordered table-striped table-condensed" id="tablework">
+	<table  class="table table-bordered table-striped table-condensed" id="tablework">
 
 	<!-- <tr>
 	<th>Имя</th>
