users table css

--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -273,6 +273,14 @@ h1, h3 {
 	background-color: white;
 }
 
+#clients > tbody > tr:nth-child(n) > td {
+	background-color: GhostWhite;
+}
+
+#clients > tbody > tr:nth-child(2n+1) > td {
+	background-color: white;
+}
+
 
 .ColVis {
 	float: left !important;
