--- a/app/views/contracts/edit.html.erb
+++ b/app/views/contracts/edit.html.erb
@@ -56,9 +56,16 @@
 				<% for building in @contract.buildings %>
 	 			<div class="row">
 					<div class="form-group" id ="building_group">
-						<label class="col-md-3 control-label">Объект</label>
-						  <div class="col-md-5">
+						<label class="col-md-3 control-label">Объект
+							<%= link_to "/delete_building/#{@contract.id}/#{building.id}" do %>
+							<span class="glyphicon glyphicon-trash"></span>
+							<% end %>
+						</label>
+						 <div class="col-md-5">
+
 						  <%= select_tag :building, options_from_collection_for_select(@list_buildings, 'id', 'arrival_address', building.id), :prompt => "Выберите из списка", :class => "form-control", required: ""%>
+
+							
 						</div>
 					</div>
 				</div>
