add_back_from_arcgive

--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -3,13 +3,25 @@
 <h1><%= @name %></h1>
 
 <div id = "archive">
-<%= link_to controller: "requistions", action: "index", position: '11', value: 'Завершено' do %>
-				<div class="btn btn-default btnarchive">
-					<span class="glyphicon glyphicon-briefcase"></span>&nbspАрхив
-				</div>
-			<% end %>
+
+<% if @pos=='11' and @value=='Завершено' %>
+	<%= link_to controller: "requistions", action: "index", position: '11', value: 'Статус' do %>
+					<div class="btn btn-default btnarchive">
+						<span class="glyphicon glyphicon-briefcase"></span>Заявки
+					</div>
+				<% end %>
 </div>
-<script type="text/javascript">
+<% else %>
+	<%= link_to controller: "requistions", action: "index", position: '11', value: 'Завершено' do %>
+					<div class="btn btn-default btnarchive">
+						<span class="glyphicon glyphicon-briefcase"></span>&nbspАрхив
+					</div>
+				<% end %>
+
+<% end %>
+
+</div>
+ <script type="text/javascript">
 	old_count = <%= @requistions.fresh.count %>;
 	set = false;
 	$(document).ready(function(){
