--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, @name) %>
-<% if @name == "Клиенты"%>
-<h1><%= @name %></h1>
+<% provide(:title, "Клиенты") %>
+<div class="container">	
+<h1>Клиенты</h1>
 <div class="row">
 	<div class="col-xs-3">
 	</div>
@@ -25,88 +25,4 @@
 	<div class="col-xs-4">
 	</div>
 </div>
-<%else %>
-<div class="container">	
-	<h1><%= @name %></h1>
-	<div class="row">
-		<div class = 'col-xs-1'>
-		</div>
-	<div class="col-xs-9">
-
-	<table id ="tablework" class="table table-bordered table-striped table-condensed">
-
-
-	<!-- <tr>
-	<th>Имя</th>
-	</tr> -->
-		<thead>
-			<tr>
-				<th>Номер</th>
-				<th>Имя</th>
-				<th>Почта</th>
-				<th>Телефон</th>
-				<th>Посещения за месяц</th>
-				<th></th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @users.each_with_index do |user, index| %>
-			<tr>
-				<td>
-					<%= user.id %>
-				</td>
-				<td>
-				<%= user.name %>
-				<% if current_user.admin? %>
-					<% div_id = "calendarBut-#{user.id}" -%>
-				</td>
-				<td>
-					<%= user.email %>
-				</td>
-				<td>
-					<%= user.phone %>
-				</td>
-				<td>
-					<%= countOfEntries(user) %>
-					<button id="<%= div_id -%>" type="button" class="btn btn-default btn-xs calendarButton pull-right">
-						<span class="glyphicon glyphicon-calendar"></span>
-					</button>
-
-					<% div_id = "calendar-#{user.id}" -%>
-
-
-					<div id="<%= div_id -%>" style="display:none" class="calendar">
-						<% @arrivals = user.arrivals %>
-						<%= calendar_for @arrivals, :first_day_of_week => 1 do |t| %>
-							<%= t.head('Пон', 'Вт', 'Ср', 'Чет', 'Пят', 'Суб', 'Воск') %>
-								<%= t.day do |day, arrivals| %>
-									<%= day.day %>
-								<% end %>
-						<% end %>
-					</div>
-				</td>
-				<td>
-
-					<div class = "pull-right">
-					<%= link_to 'Заявки рабочего', controller: :requistions, action: :index, position: 12, value: user.id%>
-
-						<%= link_to user_path(user) do%>
-							<span class="glyphicon glyphicon-pencil" title="редактировать"></span>
-						<% end %>
-						<%= link_to user, method: :delete, data: { confirm: "Вы уверены, что хотите удалить?" } do%>
-							<span class="glyphicon glyphicon-trash" title="удалить"></span>
-						<% end %>
-					&nbsp
-					</div>
-				<%#= user.arrivals.where(begin_or_end: 0).order(:time).last.time.strftime("%e %B %Y")%>
-				</td>
-			</tr>
-			<% end %>
-			<% end %>  
-
-
-		</tbody>
-</table>
 </div>
-</div>
-<% end %>
