--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -63,6 +63,26 @@
 		</div>
 		</div>
 
+		<% if current_user.admin? %>
+					<div class="form-group" id="worker_row">
+		  				<label class=" col-xs-3">Исполнитель</label>
+						<div id="workerfield" class="col-xs-5">
+						  <%= select_tag :worker, options_from_collection_for_select(@list_worker, 'id', 'name' ), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
+						</div>
+					</div>
+
+			<div class="row" id = "before_addbtn">
+				<div class="form-group">
+					<label class="col-md-8 control-label"></label>
+					<div class="col-md">
+					<button id="addbtn" type="button" allign="right" class="btn btn-default" >
+						<span class="glyphicon glyphicon-plus"></span>
+					</button>
+					</div>
+				</div>
+			</div>	
+		<% end %>
+
 		<div class="form-group">
 			<div class=" col-xs-3"></div>
 				<div class="col-xs-5">
