--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 		<table id="clients" class="table">
 			<thead>
 				<tr>
-					<th>Номер</th>
+					<th>Имя</th>
 					<th>Почта</th>
 					<th>Телефон</th>
 					<th></th>
