--- a/app/views/static_pages/panel.html.erb
+++ b/app/views/static_pages/panel.html.erb
@@ -41,6 +41,7 @@
 			<%= link_to "Создать нового рабочего(неактивно)", '/admin_new', class:"btn" %>
 			<%= link_to "Создать нового клиента(неактивно)", '/admin_new', class:"btn" %>
 			<%= link_to "Создать нового начальника", '/bosses/new', class:"btn" %>
+			<%= link_to "Новый объект", {controller: "buildings", action: "new"}, class: "btn"%> 
 		</div>
 	</div>
 	<div class="col-md-4">
