wrap all big tables

--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -2,7 +2,7 @@
 <h1>Все контракты</h1>
 
 <div class="container">
-<table id="contracts" class="table table-striped">
+<table id="contracts" class="table table-striped table-wrapper">
 	<thead>
 		<tr>
 			<th>Номер</th>
