--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -39,7 +39,7 @@
     	}, 5000);
 });
 </script>
-<table id="requistions" class="table">
+<table id="requistions" class="table table-wrapper">
 	<thead>
 		<tr>
 			<th>Номер</th>
