--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -73,9 +73,9 @@
 					<%= f.label :'Компания:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
 					<% if not @requistion.contract.nil?%>
-						<%= select_tag :company, options_from_collection_for_select(@list_contract, 'company', 'company', @requistion.contract.company), :prompt => "Выберите из списка", :class => "form-control", required: "" %>					
+						<%= select_tag :company, options_from_collection_for_select(@list_contract, 'company', 'company', @requistion.contract.company), :prompt => "Выберите из списка", :class => "selectize", required: "" %>					
 					<% else %>
-						<%= select_tag :company, options_from_collection_for_select(@list_contract, 'company', 'company'), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
+						<%= select_tag :company, options_from_collection_for_select(@list_contract, 'company', 'company'), :prompt => "Выберите из списка", :class => "selectize", required: "" %>
 					<% end %>
 					</div>
 				</div>
@@ -126,7 +126,7 @@
 				<div class="form-group">
 					<%= f.label :'Категория заявки:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
-						<%= f.select :category, [['Немедленно', 1], ['Очень срочно', 2], ['Срочно', 3]], {:prompt => "Выберите из списка"}, {:class =>  "form-control", required: ""} %>
+						<%= f.select :category, [['Немедленно', 1], ['Очень срочно', 2], ['Срочно', 3]], {:prompt => "Выберите из списка"}, {:class =>  "selectize", required: ""} %>
 
 					</div>
 				</div>
@@ -155,7 +155,7 @@
 					<div class="form-group" id="worker_row">
 						<%= f.label :'Исполнитель:', class: "col-md-3 control-label" %>
 						<div id="workerfield" class="col-md-5">
-						  <%= select_tag :worker, options_from_collection_for_select(@list_worker, 'id', 'name', user.id), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
+						  <%= select_tag :worker, options_from_collection_for_select(@list_worker, 'id', 'name', user.id), :prompt => "Выберите из списка", :class => "selectize", required: "" %>
 						</div>
 					</div>
 				</div>
@@ -165,7 +165,7 @@
 					<div class="form-group" id="worker_row">
 						<%= f.label :'Исполнитель:', class: "col-md-3 control-label" %>
 						<div id="workerfield" class="col-md-5">
-						  <%= select_tag :worker, options_from_collection_for_select(@list_worker, 'id', 'name' ), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
+						  <%= select_tag :worker, options_from_collection_for_select(@list_worker, 'id', 'name' ), :prompt => "Выберите из списка", :class => "selectize", required: "" %>
 						</div>
 					</div>
 
@@ -188,7 +188,7 @@
 				<div class="form-group" id="worker_row">
 					<%= f.label :'Статус:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
-						<%= f.select :status, [['Новая', 'fresh'], ['Назначена', 'assigned'], ['Принята в работу', 'adopted_in_work'], ['Выполняется', 'running'], ['Исполнено', 'done'], ['Завершено', 'completed']], {:prompt => "Выберите из списка"}, {:class =>  "form-control", required: ""} %>
+						<%= f.select :status, [['Новая', 'fresh'], ['Назначена', 'assigned'], ['Принята в работу', 'adopted_in_work'], ['Выполняется', 'running'], ['Исполнено', 'done'], ['Завершено', 'completed']], {:prompt => "Выберите из списка"}, {:class =>  "selectize", required: ""} %>
 						</div>
 				</div>
 			</div>
