--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,8 @@
  *= require dataTables/extras/dataTables.tableTools
  *= require dataTables/extras/dataTables.colVis
  *= require star-rating.min
- *= require selectize.bootstrap3
+ *= require selectize.default
+
  */
 
 
