--- a/app/views/contracts/edit.html.erb
+++ b/app/views/contracts/edit.html.erb
@@ -72,7 +72,7 @@
 				<% end %>
 				<% else %>
 				<div class="row">
-					<div class="form-group" id ="building_group">
+					<div class="form-group" id="building_row">
 						<label class="col-md-3 control-label">Объект</label>
 						  <div class="col-md-5">
 						  <%= select_tag :building, options_from_collection_for_select(@list_buildings, 'id', 'arrival_address'), :prompt => "Выберите из списка", :class => "form-control", required: ""%>
@@ -81,13 +81,13 @@
 				</div>
 			<% end %>
 				<div class = "row" id = "rowaddbtn">
-				<div class = "col-xs-4">
-				</div>
-				<div class = "col-xs 8">
-			<button id="addbtn" type="button" class="btn btn-default btn-xs">
+					<div class = "col-xs-4">
+					</div>
+					<div class = "col-xs 8">
+						<button id="add_building" type="button" class="btn btn-default btn-xs">
 						<span class="glyphicon glyphicon-plus"></span>
-			</button>
-				</div>
+						</button>
+					</div>
 				</div>
 			<br>	
 		<%= f.submit "Принять", class: "btn btn-large btn-primary", id: "submut" %>
