--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -11,16 +11,6 @@
 				</div>
 			</div>
 
-
-<!-- 			<div class="row">
-				<div class="form-group">
-					<label class="col-md-3 control-label">Главный адрес</label>
-					<div class="col-md-5">
-					<input class="form-control" type="text" placeholder="<%#= @requistion.building.arrival_address %>" readonly></input>
-					</div>
-				</div>
-			</div>
- -->
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Адрес вызова</label>
@@ -111,17 +101,7 @@
 					</div>
 				</div>
 			</div>
-<!-- 			<div class="row">
-				<div class="form-group">
-					<%= f.label :'Описание договора:', class: "col-md-3 control-label" %>
-					<div class="col-md-5">
-					<% if not @requistion.contract.nil?%>
-						<%= text_field_tag :description, nil, :placeholder => "Введите время  договора", class: "form-control", required: "", value: @requistion.contract.description %>					<% else %>
-						<%= text_field_tag :description, nil, :placeholder => "Введите время  договора", class: "form-control", required: "" %>
-					<% end %>
-					</div>
- 				</div>
-			</div> -->
+
 			<div class="row">
 				<div class="form-group">
 					<%= f.label :'Категория заявки:', class: "col-md-3 control-label" %>
@@ -149,51 +129,28 @@
 					</div>
 				</div>
 			</div>
-			<% if @requistion.users.where('status=0').count>0 %>
-				<% for user in @requistion.users.where('status=0') %>
-				<div class="row">
-					<div class="form-group" id="worker_row">
-						<%= f.label :'Исполнитель:', class: "col-md-3 control-label" %>
-						<div id="workerfield" class="col-md-5">
-						  <%= select_tag :worker, options_from_collection_for_select(@list_worker, 'id', 'name', user.id), :prompt => "Выберите из списка", :class => "selectize", required: "" %>
-						</div>
-					</div>
-				</div>
-				<% end %>
-			<% else %>
-				<div class="row">
-					<div class="form-group" id="worker_row">
-						<%= f.label :'Исполнитель:', class: "col-md-3 control-label" %>
-						<div id="workerfield" class="col-md-5">
-						  <%= select_tag :worker, options_from_collection_for_select(@list_worker, 'id', 'name' ), :prompt => "Выберите из списка", :class => "selectize", required: "" %>
-						</div>
-					</div>
 
-				</div>
-			<% end %>	
-			<div class="row" id = "before_addbtn">
-				<div class="form-group">
-					<label class="col-md-8 control-label"></label>
-					<div class="col-md">
-					<button id="addbtn" type="button" allign="right" class="btn btn-default" >
-						<span class="glyphicon glyphicon-plus"></span>
-					</button>
-					</div>
-				</div>
-			</div>			
-					
-
-			
-<!-- 			<div class="row">
+			<div class="row">
 				<div class="form-group" id="worker_row">
-					<%= f.label :'Статус:', class: "col-md-3 control-label" %>
-					<div class="col-md-5">
-						<%= f.select :status, [['Новая', 'fresh'], ['Назначена', 'assigned'], ['Принята в работу', 'adopted_in_work'], ['Выполняется', 'running'], ['Исполнено', 'done'], ['Завершено', 'completed']], {:prompt => "Выберите из списка"}, {:class =>  "selectize", required: ""} %>
-						</div>
+					<%= f.label :'Исполнители:', class: "col-md-3 control-label" %>
+					<div id="workerfield" class="col-md-5">
+					<select id="workers-select" name="workers[]" multiple  placeholder="Выберите рабочих">
+						<%= options_for_select(User.worker.collect {|p| [ p.name, p.id ] },
+						@requistion.users.worker.collect {|p|  p.id } )	%>
+						 
+					</select>
+					<script>
+						$('#workers-select').selectize({
+							maxItems: 100,
+							plugins: ['remove_button']
+						});
+					</script>
+					</div>
 				</div>
-			</div>
- -->
 
+			</div>
+			
+					
 
 	<%= f.submit "Принять", class: "btn btn-large btn-primary", id: "submut" %>	
 	<%= link_to "Назад к заявкам", {controller: "requistions", action: "index"}, class: "btn"%>			
