--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -106,7 +106,7 @@
 				<div class="form-group">
 					<%= f.label :'Категория заявки:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
-						<%= f.select :category, [['Немедленно', 1], ['Очень срочно', 2], ['Срочно', 3]], {:prompt => "Выберите из списка"}, {:class =>  "selectize", required: ""} %>
+						<%= f.select :category, [['Немедленно', 1], ['Очень срочно', 2], ['Срочно', 3]], {:prompt => "Выберите из списка"}, {:class =>  "form-control", required: ""} %>
 
 					</div>
 				</div>
