new yandex form-searching

--- a/app/views/requistions/_versions.html.erb
+++ b/app/views/requistions/_versions.html.erb
@@ -2,9 +2,14 @@
 	<label class=" col-md-3">Описание договора</label>
 	<div class="col-md-5">
 		<% if not @requistion.contract.nil?%>
-		<%= select_tag "version_id", options_from_collection_for_select(@list_company, "id", "description", @requistion.contract_id), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
+		<%= select_tag "version_id", options_from_collection_for_select(@list_company, "id", "description", @requistion.contract_id), :prompt => "Выберите из списка", :class => "selectize", required: "" %>
 		<% else %>
-		<%= select_tag "version_id", options_from_collection_for_select(@list_company, "id", "description"), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
-		<% end %>	
+		<%= select_tag "version_id", options_from_collection_for_select(@list_company, "id", "description"), :prompt => "Выберите из списка", :class => "selectize", required: "" %>
+		<% end %>
+		<script>
+		$('#version_id').selectize({
+			
+		});
+		</script>	
 	</div>
 </div>
