--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -19,6 +19,11 @@
 				<%= f.select :building_id, options_from_collection_for_select(@list, 'id', 'arrival_address'), {:prompt => "Выберите из списка адрес прибытия специалистов"}, {:class => "selectize", required: ""  }%>
 
 				</div>
+				<script>
+				$('#requistion_building_id').selectize({
+					
+				});
+				</script>
 
 			</div>
 		</div>
@@ -45,7 +50,7 @@
 			<div class="form-group">
 			<label class=" col-xs-3">Тип работ</label>
 			<div class="col-xs-5">
-				<%= f.select :type_requistion, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['АПС', 'П'], ['АУУ', 'У'], ['Видеокамера', 'В'], ['Системы дымоудаления', 'C'], ['Видеодомофон', 'Д'], ['Аварийное обслуживание', 'А'], ['Другое', 'Д']], { :prompt => "Выберите из списка" }, { :class => "selectize", required: ""  }  %>
+				<%= f.select :type_requistion, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['АПС', 'П'], ['АУУ', 'У'], ['Видеокамера', 'В'], ['Системы дымоудаления', 'C'], ['Видеодомофон', 'Д'], ['Аварийное обслуживание', 'А'], ['Другое', 'Д']], { :prompt => "Выберите из списка" }, { :class => "form-control", required: ""  }  %>
 			</div>
 			</div>
 		</div>
