--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -155,9 +155,12 @@
 
 			</div>
 			
-					
-
-	<%= f.submit "Принять", class: "btn btn-large btn-primary", id: "submut" %>	
-	<%= link_to "Назад к заявкам", {controller: "requistions", action: "index"}, class: "btn"%>			
+<div class="row">
+	<div class=" col-xs-3"></div>
+	<div class="col-xs-5">
+		<%= f.submit "Принять", class: "btn btn-large btn-primary", id: "submut" %>	
+		<%= link_to "Назад к заявкам", {controller: "requistions", action: "index"}, class: "btn"%>
+	</div>
+</div>				
 
 <% end %>
