--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -27,13 +27,13 @@
 		</div>
 		</div>
 
-	<div class="container">
+	<br>
 		<div class="row">
-			<div class="col-md-4">
+			<div class=" col-md-3"></div>
+			<div class="col-md-5">
 			<%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
 			</div>
 		</div>
-	</div>
 	<% end %>
 </div>
 
