--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -103,7 +103,7 @@
 		</div>
 		<% end %>
 
-		<div class="form-group">
+		<div class="row">
 			<div class=" col-xs-3"></div>
 			<div class="col-xs-5">
 				<%= f.submit "Подать заявку", class: "btn btn-large btn-primary" %>
